version/0.22/_sources/API/visualization/_autosummary/ansys.aedt.core.visualization.post.compliance.VirtualCompliance.rst.txt
VirtualCompliance
=================

.. currentmodule:: ansys.aedt.core.visualization.post.compliance

.. autoclass:: VirtualCompliance

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      VirtualCompliance.add_aedt_report
      
      
      VirtualCompliance.add_specs_to_report
      
      
      VirtualCompliance.compute_report_data
      
      
      VirtualCompliance.create_compliance_report
      
      
      VirtualCompliance.create_pdf
      
      
      VirtualCompliance.load_project
      
      
      VirtualCompliance.points_in_polygon
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      VirtualCompliance.add_project_info
      VirtualCompliance.add_specs_info
      VirtualCompliance.dut_image
      VirtualCompliance.image_height
      VirtualCompliance.image_width
      VirtualCompliance.parameters
      VirtualCompliance.project_file
      VirtualCompliance.project_name
      VirtualCompliance.public_dir
      VirtualCompliance.reports
      VirtualCompliance.specs_folder
      VirtualCompliance.template_name
      VirtualCompliance.use_portrait
   
   